--- a/src/pages/Education/Education.scss
+++ b/src/pages/Education/Education.scss
@@ -89,8 +89,8 @@
   margin-bottom: 0.65rem;
   font-family: $font-mono;
 
-  .theme-light & { color: rgba($light-text, 0.4); }
-  .theme-dark &  { color: rgba($dark-text, 0.35); }
+  .theme-light & { color: rgba($light-text, 0.65); }
+  .theme-dark &  { color: rgba($dark-text, 0.65); }
 }
 
 .coursework-tags {
